Fix tooltip z-index issue hover on fancy profile

--- a/src/modules/user-highlighting/profile.css
+++ b/src/modules/user-highlighting/profile.css
@@ -165,6 +165,7 @@
 }
 
 .mh-improved-fancy-profile .hunterInfoView-wrapper .hunterInfoView-idCardBlock {
+  z-index: 0;
   height: 220px;
 }
 
